@@ -193,6 +193,8 @@ if [expr ([istarget "i*86-*-*"] || [istarget "x86_64-*-*"]) && [gas_64_check]] t
     run_dump_test "x86-64-simd-intel"
     run_dump_test "x86-64-mem"
     run_dump_test "x86-64-mem-intel"
+    run_dump_test "x86-64-reg"
+    run_dump_test "x86-64-reg-intel"
 
     if { ![istarget "*-*-aix*"]
       && ![istarget "*-*-beos*"]
